; ModuleID = '/home/carl/AnghaBench/git/extr_commit.c_get_commit_tree_oid.c'
source_filename = "/home/carl/AnghaBench/git/extr_commit.c_get_commit_tree_oid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.object_id = type { i32 }
%struct.commit = type { i32 }
%struct.tree = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { %struct.object_id }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.object_id* @get_commit_tree_oid(%struct.commit* %0) #0 {
  %2 = alloca %struct.commit*, align 8
  %3 = alloca %struct.tree*, align 8
  store %struct.commit* %0, %struct.commit** %2, align 8
  %4 = load %struct.commit*, %struct.commit** %2, align 8
  %5 = call %struct.tree* @get_commit_tree(%struct.commit* %4)
  store %struct.tree* %5, %struct.tree** %3, align 8
  %6 = load %struct.tree*, %struct.tree** %3, align 8
  %7 = icmp ne %struct.tree* %6, null
  br i1 %7, label %8, label %12

8:                                                ; preds = %1
  %9 = load %struct.tree*, %struct.tree** %3, align 8
  %10 = getelementptr inbounds %struct.tree, %struct.tree* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  br label %13

12:                                               ; preds = %1
  br label %13

13:                                               ; preds = %12, %8
  %14 = phi %struct.object_id* [ %11, %8 ], [ null, %12 ]
  ret %struct.object_id* %14
}

declare dso_local %struct.tree* @get_commit_tree(%struct.commit*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
